blg438e/Deney0/C5515_Support_Files/C5515_Lib/dsplib_2.40.00/EXAMPLES/neg/t4.h
/* This is a test for neg: rand */
#define NX 32
#define FNAME "t4"
#define MAXERROR 10

DATA x[NX] ={
28538,
27322,
-5881,
25798,
-28975,
-9643,
20523,
-32122,
-23666,
-19480,
-19745,
6802,
-14930,
-19739,
-31768,
16173,
-3599,
28299,
-2229,
-5332,
22689,
1648,
-19488,
11281,
22158,
-31481,
11880,
-7899,
21744,
184,
13727,
-4661,
};

DATA rtest[NX] ={
-28539,
-27322,
5881,
-25798,
28974,
9642,
-20524,
32122,
23666,
19480,
19745,
-6802,
14930,
19739,
31767,
-16173,
3598,
-28299,
2229,
5331,
-22690,
-1648,
19487,
-11281,
-22159,
31481,
-11880,
7898,
-21745,
-184,
-13728,
4660,
};

DATA r[NX]; 
